@@ -36,8 +36,11 @@ COMMANDS_BY_IDX = {
     {command='buildingplan set logs false', group='automation', mode='run',
         desc='Enable if you usually don\'t want to use logs for construction.'},
     {command='cleanowned', group='automation', mode='repeat',
-        desc='Encourage dwarves to drop tattered clothing and grab new ones.',
+        desc='Encourage dwarves to discard tattered clothing at the dump when there is new available clothing.',
         params={'--time', '1', '--timeUnits', 'months', '--command', '[', 'cleanowned', 'X', ']'}},
+    {command='cleanowned nodump', group='automation', mode='repeat',
+        desc='Encourage dwarves to drop tattered clothing on the floor when there is new available clothing.',
+        params={'--time', '1', '--timeUnits', 'months', '--command', '[', 'cleanowned', 'X', 'nodump', ']'}},
     {command='gui/settings-manager load-standing-orders', group='automation', mode='run',
         desc='Go to the Standing Orders tab in the Labor screen to save your current settings.'},
     {command='gui/settings-manager load-work-details', group='automation', mode='run',
