@@ -42,6 +42,7 @@ Template for new versions:
 
 ## Misc Improvements
 - `gui/reveal`: show aquifers even when not in mining mode
+- `gui/control-panel`: add alternate "nodump" version for `cleanowned` that does not cause citizens to toss their old clothes in the dump. this is useful for players who would rather sell old clothes than incinerate them
 
 ## Removed
 - `drain-aquifer`: replaced by ``aquifer drain --all``; an alias now exists so ``drain-aquifer`` will automatically run the new command
